# advent-of-code-2024

day-1/challenge-1/: solve.mjs
day-1/challenge-2/: solve.mjs
day-2/challenge-1/: solve.mjs
day-2/challenge-2/: solve.mjs
rust_solutions/: Cargo.toml
rust_solutions/src/: main.rs
